--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
         <nav class="nav bd_grid">
           <div>
-            <a href="#" class="nav_logo">Muthu Raja K</a>
+            <a href="index.html" class="nav_logo">Muthu Raja K</a>
           </div>
   
           <div class="nav_menu" id="nav_menu">
