--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
              <i class="bx bxl-linkedin-square"></i>
         </a>
         
-        <a href="https://www.instagram.com/kmraja_20" class="home_social-icon" 
+        <a href="https://www.instagram.com/____kmraja_20" class="home_social-icon" 
             data-aos="fade-down" data-aos-delay="300" 
             target="_blank" rel="noopener noreferrer">
              <i class="bx bxl-instagram"></i>
@@ -894,7 +894,7 @@
             <a href="https://www.linkedin.com/in/muthu-raja-k-6846912b9/" class="footer_icon" target="_blank" rel="noopener noreferrer">
                 <i class="bx bxl-linkedin-square"></i>
             </a>
-            <a href="https://www.instagram.com/kmraja_20?utm_source=qr&igsh=ZXQ1bjM0Zmpmczly" class="footer_icon" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/____kmraja_20?utm_source=qr&igsh=ZXQ1bjM0Zmpmczly" class="footer_icon" target="_blank" rel="noopener noreferrer">
                 <i class="bx bxl-instagram"></i>
             </a>
             <a href="https://github.com/VKRaja20" class="footer_icon" target="_blank" rel="noopener noreferrer">
